# nano-llm

./: .gitignore  README.md  chat.py  main.py  pyproject.toml  supervisord.conf
src/: dataloader.py  dataset.py  model.py  trainer.py  visualizer.py
src/optim/: __init__.py  c_adamw.py
src/tokenizer/: tokenizer.py
